Fix cards on firefox

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -298,6 +298,8 @@ body {
     top: 50%; left: 50%;
     width: 100%;
     transform: translate(-50%,-50%);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
   }
   .meaning{
     position: absolute;
@@ -306,6 +308,8 @@ body {
     font-family: 'Sawarabi Mincho', sans-serif;
 
     transform: translate(-50%,-25%);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
   }
   .example{
     position: absolute;
@@ -314,6 +318,8 @@ body {
     top: 75%; left: 50%;
     transform: translate(-50%,-75%);
     font-family: 'Pacifico', cursive;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
 
     
   }
